# openvoxel

./: Cargo.toml  README.md
.zed/: settings.json
client/: Cargo.toml
client/assets/blocks/: maple_slab.ron  stone.ron
client/assets/blocks/models/: full_block.ron  slab.ron  stair.ron  stair_inner.ron
client/assets/blocks/templates/: fence.ron  full_block_mono.ron  slab.ron  stair.ron
client/assets/locale/: en-us.ron
client/assets/shaders/: chunk.wgsl
client/src/: events.rs  focus.rs  input.rs  main.rs  net.rs  player.rs  settings.rs  startup.rs  states.rs  window.rs
client/src/net/: channel.rs  mod.rs  update.rs
client/src/player/: mod.rs
client/src/render/: atlases.rs  mod.rs  skybox.rs
client/src/render/chunk/: combiner.rs  mod.rs
client/src/sequences/: connect.rs  mod.rs  starting.rs
client/src/ui/: button.rs  chat.rs  hint.rs  mod.rs  util.rs
client/src/ui/elements/: mod.rs
client/src/ui/menus/: connecting.rs  mod.rs  pause.rs  server_select.rs  starting.rs  title.rs
client/src/world/: io.rs
common/data/: Cargo.toml
common/data/src/: info.rs  lib.rs  locale.rs  queue.rs  registry.rs  sequence.rs  states.rs  table.rs  tags.rs  text.rs  util.rs
common/data/src/blocks/: mod.rs  variant.rs
common/data/src/blockstates/: coverage.rs  mod.rs  quad.rs
common/data/src/fs/: mod.rs  packs.rs  path.rs  path2.rs  save.rs
common/math/: Cargo.toml
common/math/src/: activity.rs  axis.rs  lib.rs  util.rs
common/math/src/noise/: fractal.rs  mod.rs  perlin.rs  simplex.rs  worley.rs  yancey.rs
common/math/src/rng/: bits.rs  mod.rs  permutation.rs
common/math/src/space/: area.rs  mod.rs  volume.rs
common/protocol/: Cargo.toml
common/protocol/src/: codec.rs  exit.rs  lib.rs  netsync.rs  packet.rs  session.rs  types.rs
common/world/: Cargo.toml
common/world/src/: knn.rs  lib.rs  old_map.rs  resolver.rs  voxel.rs
common/world/src/region/: alloc.rs  attribute.rs  mod.rs
common/world/src/region/chunk/: column.rs  flags.rs  mod.rs
common/world/src/region/format/: mod.rs  v1.rs
common/world/src/region/subchunk/: lights.rs  mod.rs
common/world/src/region/subchunk/voxels/: mod.rs  palette.rs  words.rs
common/zip/: Cargo.toml
common/zip/src/: lib.rs
devlogs/: chunk-rendering.md  lod.md  region-files.md  sequences.md
server/: Cargo.toml
server/src/: config.rs  events.rs  main.rs  queues.rs  startup.rs  states.rs  tui.rs
server/src/net/: channel.rs  connection.rs  mod.rs  runtime.rs
server/src/player/: mod.rs  table.rs  update.rs
server/src/world/: generator.rs  loader.rs  mod.rs  subscribe.rs  subscriber.rs
server/src/world/generator/: terrain.rs
