[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
# default = ["tui"]
default = []
tui = ["dep:ratatui", "dep:color-eyre", "dep:tracing-subscriber"]

[dependencies]
# workspace dependencies
crossbeam-channel.workspace = true
serde_json.workspace = true
bevy.workspace = true
fxhash.workspace = true
bitflags.workspace = true
bytemuck.workspace = true

# common dependencies
math.path = "../common/math"
protocol.path = "../common/protocol"
data.path = "../common/data"
world.path = "../common/world"
zip.path = "../common/zip"

# Local dependencies
getrandom = "0.3.4"
aligned-vec = "0.6.4"
memmap2 = "0.9.9"
zorder = "0.2.2"

# TUI dependencies
ratatui = { version = "0.30.0", optional = true }
color-eyre = { version = "0.6.5", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }

[dependencies.mio]
version = "1.1.0"
features = ["os-poll", "net"]
