[package]
name = "data"
version = "0.1.0"
edition = "2024"

[features]
default = ["dev"]
dev = []

[dependencies]
# Common dependencies
math.path = "../math"
protocol.path = "../protocol"

# Workspace dependencies
bevy.workspace = true
fxhash.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
getrandom.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
portable-atomic.workspace = true
bitvec.workspace = true
ron.workspace = true

# Local dependencies
walkdir = "2.5.0"
priority-queue = "2.7.0"
