[package]
name = "world"
version = "0.1.0"
edition = "2024"

[features]
default = []
colored_lights = []

[dependencies]
# Workspace Dependencies
bevy.workspace = true
thiserror.workspace = true
bitvec.workspace = true
bytemuck.workspace = true
bytes.workspace = true
fxhash.workspace = true
bitflags.workspace = true

# Common dependencies
data.path = "../data"
protocol.path = "../protocol"
zip.path = "../zip"
math.path = "../math"

# Local dependencies
aligned-vec = "0.6.4"
